--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day1"
+name = "aoc_2020"
 version = "0.1.0"
 authors = ["Jay Vana <jaysvana@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 anyhow = "*"
 structopt = "*"
+
+[dev-dependencies]
+anyhow = "*"
+structopt = "*"
+thiserror = "*"
