--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,11 @@ name = "day4"
 test = false
 bench = false
 
+[[bin]]
+name = "day5"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 maplit = "*"
