Day 6 in python :(

--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -29,6 +29,11 @@ name = "day5"
 test = false
 bench = false
 
+[[bin]]
+name = "day6"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 maplit = "*"
