--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -39,6 +39,11 @@ name = "day7"
 test = false
 bench = false
 
+[[bin]]
+name = "day8"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 maplit = "*"
