--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -44,6 +44,11 @@ name = "day8"
 test = false
 bench = false
 
+[[bin]]
+name = "day9"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 maplit = "*"
