Day 15, hella inefficient

--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -54,6 +54,11 @@ name = "day10"
 test = false
 bench = false
 
+[[bin]]
+name = "day15"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 maplit = "*"
