[Partial] Day 19 part 1 rust

--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -74,9 +74,16 @@ name = "day18"
 test = false
 bench = false
 
+[[bin]]
+name = "day19"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
+log = "*"
 maplit = "*"
 peg = "*"
+pretty_env_logger = "*"
 structopt = "*"
 thiserror = "*"
