--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -9,6 +9,11 @@ name = "day1"
 test = false
 bench = false
 
+[[bin]]
+name = "day2"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 itertools = "*"
