Days 12 and 13 part 1

--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -59,11 +59,22 @@ name = "day11"
 test = false
 bench = false
 
+[[bin]]
+name = "day12"
+test = false
+bench = false
+
+[[bin]]
+name = "day13"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 itertools = "*"
 log = "*"
 maplit = "*"
 pretty_env_logger = "*"
+serde_json = "1.0.89"
 structopt = "*"
 thiserror = "*"
