--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -69,6 +69,11 @@ name = "day13"
 test = false
 bench = false
 
+[[bin]]
+name = "day14"
+test = false
+bench = false
+
 [dependencies]
 anyhow = "*"
 itertools = "*"
